[project]
name = "ledgerflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pdfplumber>=0.11.9",
    "pikepdf>=10.3.0",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.47",
]
